apps/seerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr
  namespace: apps
spec:
  selector:
    app: seerr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5055
  type: ClusterIP
